sparks_not_installed added to i18n translation. fixes #241

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1014,5 +1014,9 @@
   "calendar_opening_dialog_error": {
     "message": "Error opening the calendar event dialog",
     "description": ""
+  },
+  "sparks_not_installed": {
+    "message": "ThunderAI Sparks not installed!",
+    "description": ""
   }
 }
