--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1018,5 +1018,21 @@
   "sparks_not_installed": {
     "message": "ThunderAI Sparks not installed!",
     "description": ""
+  },
+  "prefs_OptionText_add_tags_auto": {
+    "message": "Add tags automatically",
+    "description": ""
+  },
+  "prefs_OptionText_add_tags_auto_Info": {
+    "message": "If checked, the AI will automatically add tags to newly received emails.",
+    "description": ""
+  },
+  "prefs_OptionText_add_tags_auto_force_existing": {
+    "message": "Force existing tags when autotagging",
+    "description": ""
+  },
+  "prefs_OptionText_add_tags_auto_force_existing_Info": {
+    "message": "If checked, the AI will add only existing tags to newly received emails, and won't create new tags.",
+    "description": ""
   }
 }
